Creación de reporte para la impresion de códigos de bateria dado el pallet de una Fábrica

--- a/Batracking/web/pages/reportes/repCodigos.xhtml
+++ b/Batracking/web/pages/reportes/repCodigos.xhtml
@@ -5,47 +5,30 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/plantilla.xhtml">
 	<ui:define name="contenido">
-	<p:growl id="menGen" />
+		<p:growl id="menGen" />
 		<p:toolbar>
 			<f:facet name="left">
-				<p:outputLabel value="Reporte Codigos QR" />
-			</f:facet>
-			<f:facet name="right">
-				<p:commandButton value="Nuevo" icon="ui-icon-document"
-					process="@this"
-					actionListener="#{repCodigosBean.resetearFormulario}"
-					update="@form" />
+				<p:outputLabel value="Impresión de Codigos QR" />
 			</f:facet>
 		</p:toolbar>
-		<br/>
+		<br />
 
 		<p:panelGrid id="panGriPro" columns="4" style="width:100%">
-			<p:outputLabel value="Tipo Entidad:" styleClass="etiquetaReq" />
-			<p:selectOneMenu id="cmbTipEnt" effect="drop" required="true"
-				value="#{repCodigosBean.idTipEnt}" style="width:200px!important">
+			<p:outputLabel value="Pallet:" styleClass="etiquetaReq" />
+			<p:selectOneMenu id="cmbPallet" effect="drop" required="true"
+				value="#{repCodigosBean.idPallet}" style="width:200px!important">
 				<f:selectItem itemLabel="Seleccione una opción" itemValue=""
 					noSelectionOption="true" />
-				<f:selectItems value="#{repCodigosBean.listaTipoEntidades}" />
-				<p:ajax event="change"
-					listener="#{repCodigosBean.cargarEntidadesPadre}"
-					update=":frmGen:cmbEnt" />
-			</p:selectOneMenu>
-			<p:outputLabel value="Entidad:" styleClass="etiquetaReq" />
-			<p:selectOneMenu id="cmbEnt" effect="drop" required="true"
-				value="#{repCodigosBean.idEnt}" style="width:200px!important">
-				<f:selectItem itemLabel="Seleccione una opción" itemValue=""
-					noSelectionOption="true" />
-				<f:selectItems value="#{repCodigosBean.listaEntidades}" />
+				<f:selectItems value="#{repCodigosBean.listaPalletsFabrica}" />
 			</p:selectOneMenu>
 		</p:panelGrid>
 
-		<br/>				
-        <h:panelGrid columns="1">
-            <h:commandLink id="repId" 
-                           actionListener="#{repCodigosBean.verReporte()}"
-                           target="_blank" >
-				<p:commandButton value="Ver" icon="ui-icon-print" title="Ver Qr"/>
-            </h:commandLink>  
-        </h:panelGrid> 
+		<br />
+		<h:panelGrid columns="1">
+			<h:commandLink id="repId"
+				actionListener="#{repCodigosBean.verReporte()}" target="_blank">
+				<p:commandButton value="Ver" icon="ui-icon-print" title="Ver Qr" />
+			</h:commandLink>
+		</h:panelGrid>
 	</ui:define>
-</ui:composition>	
+</ui:composition>
